--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -512,7 +512,6 @@
       .line-cache-write {
         stroke: #d4a853;
       }
-
     </style>
   </head>
   <body>
@@ -538,13 +537,23 @@
 
         const container = document.getElementById("token-chart");
         const height = 120;
-        const margin = { top: 5, right: 10, bottom: 20, left: 45 };
+        const margin = {
+          top: 5,
+          right: 10,
+          bottom: 20,
+          left: 45,
+        };
 
         // Compute cumulative sums with elapsed time
-        const startTime = new Date(messages[0].created_at).getTime();
-        let cumRead = 0, cumWrite = 0;
+        const startTime = new Date(
+          messages[0].created_at
+        ).getTime();
+        let cumRead = 0,
+          cumWrite = 0;
         const data = messages.map((m) => ({
-          time: (new Date(m.created_at).getTime() - startTime) / 1000,
+          time:
+            (new Date(m.created_at).getTime() - startTime) /
+            1000,
           cacheRead: (cumRead += m.cache_read_tokens),
           cacheWrite: (cumWrite += m.cache_creation_tokens),
         }));
@@ -552,8 +561,16 @@
         const maxTime = d3.max(data, (d) => d.time);
 
         const series = [
-          { key: "cacheRead", title: "Cache Read", cls: "line-cache-read" },
-          { key: "cacheWrite", title: "Cache Write", cls: "line-cache-write" },
+          {
+            key: "cacheRead",
+            title: "Cache Read",
+            cls: "line-cache-read",
+          },
+          {
+            key: "cacheWrite",
+            title: "Cache Write",
+            cls: "line-cache-write",
+          },
         ];
 
         // Calculate width before creating elements (account for gap)
@@ -568,28 +585,51 @@
 
           const width = chartWidth;
 
-          const x = d3.scaleLinear()
+          const x = d3
+            .scaleLinear()
             .domain([0, maxTime])
             .range([margin.left, width - margin.right]);
 
-          const y = d3.scaleLinear()
+          const y = d3
+            .scaleLinear()
             .domain([0, d3.max(data, (d) => d[s.key])])
             .range([height - margin.bottom, margin.top]);
 
-          const svg = d3.select(wrapper).append("svg")
+          const svg = d3
+            .select(wrapper)
+            .append("svg")
             .attr("viewBox", `0 0 ${width} ${height}`);
 
-          svg.append("g")
-            .attr("transform", `translate(0,${height - margin.bottom})`)
-            .call(d3.axisBottom(x).ticks(3).tickFormat((d) => `${Math.floor(d)}s`));
+          svg
+            .append("g")
+            .attr(
+              "transform",
+              `translate(0,${height - margin.bottom})`
+            )
+            .call(
+              d3
+                .axisBottom(x)
+                .ticks(3)
+                .tickFormat((d) => `${Math.floor(d)}s`)
+            );
 
-          svg.append("g")
+          svg
+            .append("g")
             .attr("transform", `translate(${margin.left},0)`)
-            .call(d3.axisLeft(y).ticks(4).tickFormat(d3.format(".2s")));
+            .call(
+              d3
+                .axisLeft(y)
+                .ticks(4)
+                .tickFormat(d3.format(".2s"))
+            );
 
-          const line = d3.line().x((d) => x(d.time)).y((d) => y(d[s.key]));
+          const line = d3
+            .line()
+            .x((d) => x(d.time))
+            .y((d) => y(d[s.key]));
 
-          svg.append("path")
+          svg
+            .append("path")
             .datum(data)
             .attr("class", `chart-line ${s.cls}`)
             .attr("d", line);
@@ -861,6 +901,7 @@
       }
 
       async function copyCuesToClipboard() {
+        const session = window.sessionData;
         const events = window.sessionEvents || [];
 
         const cues = events
@@ -872,7 +913,10 @@
           return;
         }
 
-        await navigator.clipboard.writeText(cues);
+        const prompt = session?.initial_prompt || "(no prompt)";
+        const formatted = `${prompt}\n\n***\n\n${cues}`;
+
+        await navigator.clipboard.writeText(formatted);
 
         const btn = document.getElementById("copy-cues-btn");
         btn.textContent = "Copied";
