--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -573,9 +573,10 @@
           },
         ];
 
-        // Calculate width before creating elements (account for gap)
+        // Calculate width - check if stacked (column) or side-by-side
         const containerWidth = container.clientWidth;
-        const chartWidth = (containerWidth - 16) / 2; // 16px gap
+        const isStacked = window.innerWidth <= 600;
+        const chartWidth = isStacked ? containerWidth : (containerWidth - 16) / 2;
 
         series.forEach((s) => {
           const wrapper = document.createElement("div");
