--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -1016,6 +1016,7 @@
             }
             btn.textContent = progressText;
             status.innerHTML = "";
+            startExportPolling();
             break;
           case "complete":
             btn.disabled = false;
