--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -870,6 +870,7 @@
           year: "numeric",
           hour: "numeric",
           minute: "2-digit",
+          second: "2-digit",
         });
 
         const header = `[${dateFormatted}]\n${session.initial_prompt || "(no prompt)"}`;
