--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,11 @@
               >Living instruction 🌀</span
             >
           </label>
+          <select id="voice-selector" class="model-selector">
+            <option value="marin" selected>Marin</option>
+            <option value="alloy">Alloy</option>
+            <option value="shimmer">Shimmer</option>
+          </select>
           <select id="model-selector" class="model-selector">
             <option value="haiku" selected>Haiku</option>
             <option value="sonnet">Sonnet</option>
