--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -97,8 +97,8 @@
 
       .session-prompt {
         color: var(--text-primary);
-        font-size: 1.125rem;
-        line-height: 1.5;
+        font-size: 0.875rem;
+        line-height: 1.25;
         margin-bottom: 1rem;
         white-space: pre-wrap;
       }
@@ -389,7 +389,7 @@
         color: var(--bg-deep);
         padding: 0.625rem 1.5rem;
         border-radius: 6px;
-        font-size: 1rem;
+        /* font-size: 1rem; */
         font-weight: 600;
         cursor: pointer;
         transition: all 0.2s ease;
