--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -389,7 +389,7 @@
         color: var(--bg-deep);
         padding: 0.625rem 1.5rem;
         border-radius: 6px;
-        /* font-size: 1rem; */
+        font-size: 1rem;
         font-weight: 600;
         cursor: pointer;
         transition: all 0.2s ease;
