--- a/public/inspect-session.html
+++ b/public/inspect-session.html
@@ -394,6 +394,14 @@
         cursor: pointer;
         transition: all 0.2s ease;
         width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+        svg {
+          width: 1rem;
+          height: 1rem;
+        }
       }
 
       .replay-btn:hover {
@@ -724,7 +732,10 @@
             </div>
             <div class="session-prompt">${escapeHtml(session.initial_prompt || "(no prompt)")}</div>
             <div class="replay-row">
-              <button class="replay-btn" id="replay-btn" onclick="replaySession()">Replay</button>
+              <button class="replay-btn" id="replay-btn" onclick="replaySession()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-rotate-ccw-icon lucide-rotate-ccw"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/></svg>
+                Play Again
+              </button>
             </div>
             <div class="session-meta">${formatted}</div>
             <div class="session-costs">
